--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "jest": "^29.7.0",
     "jest-runner-groups": "^2.2.0",
     "prettier": "^3.2.4",
+    "prisma": "^5.11.0",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
@@ -36,6 +37,7 @@
     "test": "test"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.1"
   },
