--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
     "test": "npx jest --group=unit",
     "test:integration": "npx jest --group=integration"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -31,6 +34,7 @@
     "prettier": "^3.2.4",
     "prisma": "^5.11.0",
     "rimraf": "^5.0.5",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3"
   },
   "directories": {
@@ -38,6 +42,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.1"
   },
